--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,9 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-    "pydantic==2.8.2",
-    "iteration_utilities==0.12.1"
+    "bidict>=0.23,<0.24",
+    "iteration_utilities>=0.12,<0.13",
+    "pydantic>=2.8,<2.9"
 ]
 
 [project.optional-dependencies]
