--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,8 @@ classifiers = [
 ]
 dependencies = [
     "bidict>=0.23,<0.24",
+    "defusedxml>=0.7,<0.8",
+    "dicttoxml>=1.7,<1.8",
     "iteration_utilities>=0.12,<0.13",
     "pydantic>=2.8,<2.9"
 ]
@@ -71,6 +73,7 @@ dev = [
 
 ]
 test = [
+    "deepdiff>=7.0,<8.0",
     "pytest>=8.0.0,<9.0.0",
     "pytest-cov>=5.0.0,<6.0.0",
     "pytest-dotenv>=0.5.0,<1.0.0",
