--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Debug Files
+data.export.after.json
+data.export.before.json
+data.import.after.json
+data.import.before.json
+Data.xml
+survey.tml
