--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,74 +14,70 @@ version = "0.0.1"
 description = "A library to read/write and convert OpenSpeleo files"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 keywords = ["cave", "survey", "karst"]
-authors = [
-  {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
-]
-maintainers = [
-  {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
-]
+authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
+maintainers = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
 classifiers = [
-    # How mature is this project? Common values are
-    #   3 - Alpha
-    #   4 - Beta
-    #   5 - Production/Stable
-    "Development Status :: 3 - Alpha",
+  # How mature is this project? Common values are
+  #   3 - Alpha
+  #   4 - Beta
+  #   5 - Production/Stable
+  "Development Status :: 3 - Alpha",
 
-    # Indicate who your project is intended for
-    "Intended Audience :: Developers",
-    "Intended Audience :: Science/Research",
-    "Intended Audience :: Information Technology",
-    "Topic :: Software Development :: Build Tools",
-    "Topic :: Scientific/Engineering",
-    "Topic :: Software Development :: Libraries",
-    "Topic :: Utilities",
+  # Indicate who your project is intended for
+  "Intended Audience :: Developers",
+  "Intended Audience :: Science/Research",
+  "Intended Audience :: Information Technology",
+  "Topic :: Software Development :: Build Tools",
+  "Topic :: Scientific/Engineering",
+  "Topic :: Software Development :: Libraries",
+  "Topic :: Utilities",
 
-    # Pick your license as you wish
-    "License :: OSI Approved :: Apache Software License",
+  # Pick your license as you wish
+  "License :: OSI Approved :: Apache Software License",
 
-    # Not OS Specific
-    "Operating System :: OS Independent",
+  # Not OS Specific
+  "Operating System :: OS Independent",
 
-    # Specify the Python versions you support here. In particular, ensure
-    # that you indicate you support Python 3. These classifiers are *not*
-    # checked by "pip install". See instead "requires-python" key in this file.
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3 :: Only",
+  # Specify the Python versions you support here. In particular, ensure
+  # that you indicate you support Python 3. These classifiers are *not*
+  # checked by "pip install". See instead "requires-python" key in this file.
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-    "bidict>=0.23,<0.24",
-    "defusedxml>=0.7,<0.8",
-    "dicttoxml2>=2.1,<2.2",
-    "iteration_utilities>=0.12,<0.13",
-    "pydantic>=2.8,<2.9",
-    "xmltodict>=0.13,<0.14"
+  "bidict>=0.23,<0.24",
+  "defusedxml>=0.7,<0.8",
+  "dicttoxml2>=2.1,<2.2",
+  "iteration_utilities>=0.12,<0.13",
+  "pydantic>=2.10,<2.11",
+  "xmltodict>=0.13,<0.14",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "check-manifest",
-    # Pre Commit Hooks
-    "pre-commit>=3.6.0,<3.7",
-    # Linting
-    "ruff>=0.3,<0.4"
+  "check-manifest",
+  # Pre Commit Hooks
+  "pre-commit>=3.6.0,<3.7",
+  # Linting
+  "ruff>=0.3,<0.4",
 
 ]
 test = [
-    "deepdiff>=7.0,<8.0",
-    "pytest>=8.0.0,<9.0.0",
-    "pytest-cov>=5.0.0,<6.0.0",
-    "pytest-dotenv>=0.5.0,<1.0.0",
-    "pytest-env>=1.1.3,<2.0.0",
-    "pytest-runner>=6.0.0,<7.0.0",
-    "pytest-ordering>=0.6,<1.0.0",
-    "parameterized>=0.9.0,<0.10"
+  "deepdiff>=7.0,<8.0",
+  "pytest>=8.0.0,<9.0.0",
+  "pytest-cov>=5.0.0,<6.0.0",
+  "pytest-dotenv>=0.5.0,<1.0.0",
+  "pytest-env>=1.1.3,<2.0.0",
+  "pytest-runner>=6.0.0,<7.0.0",
+  "pytest-ordering>=0.6,<1.0.0",
+  "parameterized>=0.9.0,<0.10",
 ]
 
 [project.urls]
@@ -102,9 +98,7 @@ validate_tml = "openspeleo_lib.commands.validate_tml:validate"
 # convert = "openspeleo_lib.commands.convert:convert"
 
 [tool.pytest.ini_options]
-testpaths = [
-    "tests/",
-]
+testpaths = ["tests/"]
 addopts = "-vvv --cov=openspeleo_lib --cov-report=term-missing"
 # addopts = "-vvv --cov=openspeleo_lib --cov-report=term-missing --capture=no"
 
@@ -211,30 +205,34 @@ select = [
   "RUF",
 ]
 ignore = [
-  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
-  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
-  "SIM102", # sometimes it's better to nest
-  "UP038",  # Checks for uses of isinstance/issubclass that take a tuple
-  # of types for comparison.
-  # Deactivated because it can make the code slow:
-  # https://github.com/astral-sh/ruff/issues/7871
+  "COM812", # Checks for the absence of trailing commas.
+  "DTZ007", # Checks for uses of datetime.datetime.strptime() that lead to naive 
+  # datetime objects.
   "EM101",  # Checks for the use of string literals in exception constructors.
   "EM102",  # Checks for the use of f-strings in exception constructors.
-  "TRY003", # Checks for long exception messages that are not defined in the
-  # exception class itself.
-  "COM812", # Checks for the absence of trailing commas.
-  "UP009",  # Checks for unnecessary UTF-8 encoding declarations.
+  "ERA001", # Checks for commented-out Python code.
   "EXE001", # Checks for a shebang directive in a file that is not executable.
-  "FBT002", # Checks for the use of boolean positional arguments in function
+  "FBT001", # Checks for the use of boolean positional arguments in function 
+  # definitions, as determined by the presence of a bool type hint.
+  "FBT002", # Checks for the use of boolean positional arguments in function 
   # definitions, as determined by the presence of a boolean default value.
-  "PLR0913", # Checks for function definitions that include too many arguments.
-  "S311",    # Checks for uses of cryptographically weak pseudo-random number generators.
-  "ERA001",  # Checks for commented-out Python code.
+  "N806",    # Checks for the use of non-lowercase variable names in functions.
   "N815",    # Checks for class variable names that follow the mixedCase convention.
-  "FBT001",  # Checks for the use of boolean positional arguments in function definitions,
-  # as determined by the presence of a bool type hint.
-  "PLR2004", # Checks for the use of unnamed numerical constants ("magic") values in comparisons.
-  "PYI024"   # Checks for uses of collections.namedtuple in stub files.
+  "PLR0913", # Checks for function definitions that include too many arguments.
+  "PLR2004", # Checks for the use of unnamed numerical constants ("magic") values in 
+  # comparisons.
+  "PYI024", # Checks for uses of collections.namedtuple in stub files.
+  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
+  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
+  "S311",   # Checks for uses of cryptographically weak pseudo-random number generators.
+  "SIM102", # sometimes it's better to nest
+  "TRY003", # Checks for long exception messages that are not defined in the exception 
+  # class itself.
+  "UP009", # Checks for unnecessary UTF-8 encoding declarations.
+  "UP038", # Checks for uses of isinstance/issubclass that take a tuple of types for 
+  # comparison. 
+  # Deactivated because it can make the code slow: 
+  # https://github.com/astral-sh/ruff/issues/7871
 ]
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
