--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dependencies = [
   "defusedxml>=0.7,<0.8",
   "dicttoxml2>=2.1,<2.2",
   "iteration_utilities>=0.12,<0.14",
+  "orjson>=3.10,<3.11",
   "pydantic>=2.10,<2.11",
   "xmltodict>=0.13,<0.15",
 ]
