--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ dev = [
 ]
 test = [
   "deepdiff>=7.0,<9.0",
+  "hypothesis>=6.127,<6.128",
   "pytest>=8.0.0,<9.0.0",
   "pytest-cov>=5.0.0,<7.0.0",
   "pytest-dotenv>=0.5.0,<1.0.0",
@@ -234,6 +235,9 @@ ignore = [
   "UP038", # Checks for uses of isinstance/issubclass that take a tuple of types for
   # comparison. Deactivated because it can make the code slow:
   # https://github.com/astral-sh/ruff/issues/7871
+  "PLR0912", # Checks for functions or methods with too many branches, including (nested)
+  # if, elif, and else branches, for loops, try-except clauses, and match and case statements.
+  "C901", # Checks for functions with a high McCabe complexity.
 ]
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
