--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dependencies = [
   "bidict>=0.23,<0.24",
   "orjson>=3.10,<3.11",
   "pydantic>=2.10,<2.11",
+  "pydantic-extra-types>=2.10,<2.11",
   "lxml>=5.3,<5.4",
 ]
 
