--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ classifiers = [
 dependencies = [
   "argparse>=1.4,<1.5",
   "bidict>=0.23,<0.24",
+  "openspeleo_core",
   "orjson>=3.10,<3.11",
   "pydantic>=2.10,<2.11",
   "pydantic-extra-types>=2.10,<2.11",
