Build backend change to `flit`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,6 @@
 [build-system]
-requires = ["setuptools >= 61.0"]
-build-backend = "setuptools.build_meta"
-
-[tool.distutils.bdist_wheel]
-universal = true
-
-[tool.setuptools.package-dir]
-openspeleo_lib = "openspeleo_lib"
+requires = ["flit_core >=3.11,<4"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = "openspeleo_lib"
