--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,18 @@
 requires = ["flit_core >=3.11,<4"]
 build-backend = "flit_core.buildapi"
 
+[tool.uv]
+dev-dependencies = [
+  "check-manifest",
+  "pre-commit>=4.1,<4.4",
+  "ruff>=0.3,<0.13",
+  "flit>=3.12,<4",
+  "wheel>=0.45",
+  # Benchmarking
+  "pyinstrument>=5.0,<6.0",
+]
+package = true
+
 [project]
 name = "openspeleo_lib"
 version = "0.0.1"
@@ -45,22 +57,14 @@ dependencies = [
   "argparse>=1.4,<1.5",
   "bidict>=0.23,<0.24",
   "openspeleo_core",
-  "orjson>=3.10,<3.11",
+  "orjson>=3.10,<3.12",
   "pydantic>=2.10,<2.12",
   "pydantic-extra-types>=2.10,<2.11",
-  "lxml>=5.3,<5.4",
+  "lxml>=6.0,<7.0",
+  "pyproj>=3.7.1,<3.8",
 ]
 
 [project.optional-dependencies]
-dev = [
-  "check-manifest",
-  # Pre Commit Hooks
-  "pre-commit>=4.1,<4.3",
-  # Benchmarking
-  "pyinstrument>=5.0,<6.0",
-  # Linting
-  "ruff>=0.3,<0.12",
-]
 test = [
   "deepdiff>=7.0,<9.0",
   "hypothesis>=6.128,<6.131",
