--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,10 @@ dependencies = [
   "pydantic>=2.10,<2.12",
   "pydantic-extra-types>=2.10,<2.11",
   "lxml>=6.0,<7.0",
+  "pyigrf @ git+https://github.com/DEKHTIARJonathan/pyIGRF.git@build_fix",
   "pyproj>=3.7.1,<3.8",
+  "dicttoxml2>=2.1.0,<2.2",
+  "xmltodict>=0.13,<0.15",
 ]
 
 [project.optional-dependencies]
@@ -75,7 +78,6 @@ test = [
   "pytest-runner>=6.0.0,<7.0.0",
   "pytest-ordering>=0.6,<1.0.0",
   "parameterized>=0.9.0,<0.10",
-  "xmltodict>=0.13,<0.15",
 ]
 
 [project.urls]
@@ -227,7 +229,8 @@ ignore = [
   # https://github.com/astral-sh/ruff/issues/7871
   "PLR0912", # Checks for functions or methods with too many branches, including (nested)
   # if, elif, and else branches, for loops, try-except clauses, and match and case statements.
-  "C901", # Checks for functions with a high McCabe complexity.
+  "C901",   # Checks for functions with a high McCabe complexity.
+  "DTZ001", # Checks for datetime instantiations that do not specify a timezone.
 ]
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
