--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ package = true
 
 [project]
 name = "openspeleo_lib"
-version = "0.0.1"
+version = "0.0.5"
 description = "A library to read/write and convert OpenSpeleo files"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -61,7 +61,8 @@ dependencies = [
   "pydantic>=2.10,<2.12",
   "pydantic-extra-types>=2.10,<2.11",
   "lxml>=6.0,<7.0",
-  "pyigrf @ git+https://github.com/DEKHTIARJonathan/pyIGRF.git@build_fix",
+  # "pyigrf @ git+https://github.com/DEKHTIARJonathan/pyIGRF.git@build_fix",
+  "pyIGRF14==1.0.2",
   "pyproj>=3.7.1,<3.8",
   "dicttoxml2>=2.1.0,<2.2",
   "xmltodict>=0.13,<0.15",
