--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,23 +3,24 @@ requires = ["flit_core >=3.11,<4"]
 build-backend = "flit_core.buildapi"
 
 [tool.uv]
-dev-dependencies = [
+package = true
+
+[dependency-groups]
+dev = [
   "check-manifest",
   "pre-commit>=4.1,<4.4",
   "ruff>=0.3,<0.13",
   "flit>=3.12,<4",
+  "twine>=6.0,<7.0",
   "wheel>=0.45",
   # Benchmarking
   "pyinstrument>=5.0,<6.0",
 ]
-package = true
 
 [project]
 name = "openspeleo_lib"
-version = "0.0.5"
-description = "A library to read/write and convert OpenSpeleo files"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 license = { file = "LICENSE" }
 keywords = ["cave", "survey", "karst"]
 authors = [{ name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }]
@@ -56,24 +57,24 @@ classifiers = [
 dependencies = [
   "argparse>=1.4,<1.5",
   "bidict>=0.23,<0.24",
-  "openspeleo_core",
+  "openspeleo_core>=0.0.2,<0.1.0",
   "orjson>=3.10,<3.12",
-  "pydantic>=2.10,<2.12",
+  "pydantic>=2.12,<2.13",
   "pydantic-extra-types>=2.10,<2.11",
   "lxml>=6.0,<7.0",
-  # "pyigrf @ git+https://github.com/DEKHTIARJonathan/pyIGRF.git@build_fix",
-  "pyIGRF14==1.0.2",
+  "pyIGRF14>=1.0.3,<1.1.0",
   "pyproj>=3.7.1,<3.8",
   "dicttoxml2>=2.1.0,<2.2",
-  "xmltodict>=0.13,<0.15",
+  "xmltodict>=1.0,<1.1",
 ]
+dynamic = ["description", "version"]
 
 [project.optional-dependencies]
 test = [
   "deepdiff>=7.0,<9.0",
-  "hypothesis>=6.128,<6.131",
+  "hypothesis>=6.128,<6.141",
   "pytest>=8.0.0,<9.0.0",
-  "pytest-cov>=5.0.0,<7.0.0",
+  "pytest-cov>=5.0.0,<8.0.0",
   "pytest-dotenv>=0.5.0,<1.0.0",
   "pytest-env>=1.1.3,<2.0.0",
   "pytest-runner>=6.0.0,<7.0.0",
