--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,11 +138,11 @@ exclude = [
   "venv",
   "*/migrations/*.py",
   "staticfiles/*",
+  "openspeleo_core/src_python/openspeleo_core/_rust_lib",
 ]
 # Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
 line-length = 88
 indent-width = 4
-target-version = "py312"
 
 [tool.ruff.lint]
 select = [
