--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,15 @@ package = true
 [dependency-groups]
 dev = [
   "check-manifest",
-  "pre-commit>=4.1,<4.5",
+  "pre-commit>=4.1,<4.6",
   "ruff>=0.14,<0.15",
   "flit>=3.12,<4",
   "twine>=6.0,<7.0",
   "wheel>=0.45",
   # Benchmarking
   "pyinstrument>=5.0,<6.0",
+  "rxml>=2.3,<2.4",
+  "lxml>=6.0,<7.0",
 ]
 
 [project]
@@ -61,7 +63,6 @@ dependencies = [
   "orjson>=3.10,<3.12",
   "pydantic>=2.12,<2.13",
   "pydantic-extra-types>=2.10,<2.11",
-  "lxml>=6.0,<7.0",
   "pyIGRF14>=1.0.3,<1.1.0",
   "pyproj>=3.7.1,<3.8",
   "dicttoxml2>=2.1.0,<2.2",
@@ -72,7 +73,7 @@ dynamic = ["description", "version"]
 [project.optional-dependencies]
 test = [
   "deepdiff>=7.0,<9.0",
-  "hypothesis>=6.128,<6.148",
+  "hypothesis>=6.128,<6.149",
   "pytest>=8.0.0,<10.0.0",
   "pytest-cov>=5.0.0,<8.0.0",
   "pytest-dotenv>=0.5.0,<1.0.0",
