--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ classifiers = [
 dependencies = [
   "argparse>=1.4,<1.5",
   "bidict>=0.23,<0.24",
-  "openspeleo_core>=0.0.2,<0.1.0",
+  "openspeleo_core[legacy]>=0.0.2,<0.1.0",
   "orjson>=3.10,<3.12",
   "pydantic>=2.12,<2.13",
   "pydantic-extra-types>=2.10,<2.11",
